objects/LBI__PlayType__c.object
<CustomObject>
    <fields>
        <fullName>LBI__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__LatticeWorkflowSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Workflow Setting</label>
        <referenceTo>LBI__LatticeWorkflowSetting__c</referenceTo>
        <relationshipName>LatticePlayTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__PlayTypeName__c</fullName>
        <label>Play Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Type__c</fullName>
        <formula>Text(LBI__LatticeWorkflowSetting__r.LBI__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Workflow__c</fullName>
        <description>This determines how leads are qualified: as a recommendation underneath an account or as a lead</description>
        <inlineHelpText>This determines how leads are qualified: as a recommendation underneath an account or as a lead</inlineHelpText>
        <label>Workflow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recommendation</fullName>
                    <default>true</default>
                    <label>Recommendation</label>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Play Type</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__LatticeWorkflowSetting__c</columns>
        <columns>LBI__PlayTypeName__c</columns>
        <columns>LBI__Workflow__c</columns>
        <columns>LBI__ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Play Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Play Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>